# pomomural

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: heroku.yaml
data/: Mural_Registry.csv  mural.csv
src/pomomural/: analysis.py  card.py  main.py  ors.py  settings.py  util.py
