[tool.poetry]
name = "pomomural"
version = "0.1.0"
description = "PomoMural web app"
authors = ["Ethan Ho <ethan.n.ho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nicegui = "^1.2.1"
openrouteservice = "^2.3.3"
memoize = { git = "https://github.com/ethho/memoize.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"

[tool.poetry.scripts]
demo-ors = "pomomural.ors:_test_otm_distance_matrix"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"